--- a/contact-host.html
+++ b/contact-host.html
@@ -684,7 +684,7 @@
                                         class="header__brand"
                                         aria-label="Airbnb Homepage"
                                         href="/"
-                                        ><div class="hidden block-lg">
+                                        ><div class="hidden block-xl">
                                           <svg
                                             width="102"
                                             height="32"
