--- a/gift.html
+++ b/gift.html
@@ -53,7 +53,7 @@
                               aria-label="Airbnb Homepage"
                               href="/"
                             >
-                              <div class="hidden block-lg">
+                              <div class="hidden block-xl">
                                 <svg
                                   width="102"
                                   height="32"
@@ -939,7 +939,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="hidden inline-block-lg"
+                                  <span class="hidden inline-block-xl"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
@@ -1083,7 +1083,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -1112,7 +1112,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="hidden inline-block-lg"
+                                  <span class="hidden inline-block-xl"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
