--- a/inbox.html
+++ b/inbox.html
@@ -423,7 +423,7 @@
         }
       }
       @media (min-width: 1128px) {
-        ._11afzjv:not([data-overlay-lg]) {
+        ._11afzjv:not([data-overlay-xl]) {
           -ms-flex-preferred-size: 0px !important;
           -webkit-flex-basis: 0px !important;
           flex-basis: 0px !important;
@@ -841,9 +841,9 @@
         }
         @supports (--custom: properties) {
           ._n7ya4ay {
-            -webkit-flex: 0 0 var(--orbital-panel-width-lg) !important;
-            -ms-flex: 0 0 var(--orbital-panel-width-lg) !important;
-            flex: 0 0 var(--orbital-panel-width-lg) !important;
+            -webkit-flex: 0 0 var(--orbital-panel-width-xl) !important;
+            -ms-flex: 0 0 var(--orbital-panel-width-xl) !important;
+            flex: 0 0 var(--orbital-panel-width-xl) !important;
           }
         }
       }
@@ -2566,9 +2566,9 @@
         }
         @supports (--custom: properties) {
           ._yy9frzn {
-            -webkit-flex: 0 0 var(--orbital-panel-width-lg) !important;
-            -ms-flex: 0 0 var(--orbital-panel-width-lg) !important;
-            flex: 0 0 var(--orbital-panel-width-lg) !important;
+            -webkit-flex: 0 0 var(--orbital-panel-width-xl) !important;
+            -ms-flex: 0 0 var(--orbital-panel-width-xl) !important;
+            flex: 0 0 var(--orbital-panel-width-xl) !important;
           }
         }
       }
@@ -7400,7 +7400,7 @@
                 <div class="_9k5m58">
                   <div
                     data-overlay-md=""
-                    data-overlay-lg=""
+                    data-overlay-xl=""
                     class="_dkm9h7"
                     aria-hidden="true"
                   ></div>
@@ -7410,7 +7410,7 @@
                       <div class="contents">
                         <div
                           data-overlay-md=""
-                          data-overlay-lg=""
+                          data-overlay-xl=""
                           class="_11afzjv"
                           aria-hidden="true"
                           role="dialog"
@@ -7574,7 +7574,7 @@
                         style="
                           --orbital-panel-transition-duration: 300ms;
                           --orbital-panel-width-md: 375px;
-                          --orbital-panel-width-lg: 375px;
+                          --orbital-panel-width-xl: 375px;
                           --orbital-panel-width-xl: 375px;
                         "
                       >
@@ -8840,7 +8840,7 @@
                         style="
                           --orbital-panel-transition-duration: 300ms;
                           --orbital-panel-width-md: 375px;
-                          --orbital-panel-width-lg: 375px;
+                          --orbital-panel-width-xl: 375px;
                           --orbital-panel-width-xl: 375px;
                         "
                       >
@@ -9056,7 +9056,7 @@
                           visibility: hidden;
                           --orbital-panel-transition-duration: 300ms;
                           --orbital-panel-width-md: 375px;
-                          --orbital-panel-width-lg: 375px;
+                          --orbital-panel-width-xl: 375px;
                           --orbital-panel-width-xl: 375px;
                         "
                       >
