--- a/products.html
+++ b/products.html
@@ -2809,7 +2809,7 @@
                                                       aria-label="Show map"
                                                       aria-describedby="location-disclaimer-tooltip"
                                                       type="button"
-                                                      class="main_content__agenda-list-btn hidden block-lg"
+                                                      class="main_content__agenda-list-btn hidden block-xl"
                                                     >
                                                       <div class="_10u42wu">
                                                         <span
@@ -6355,19 +6355,19 @@
                                                         --dls-baseColumn-width-sm: 100%;
                                                         --dls-baseColumn-width-md: 41.6667%;
                                                         --dls-baseColumn-width-mdPlus: 41.6667%;
-                                                        --dls-baseColumn-width-lg: 41.6667%;
+                                                        --dls-baseColumn-width-xl: 41.6667%;
                                                         --dls-baseColumn-width-xl: 41.6667%;
                                                         --dls-baseColumn-trailingOffset-base: 0;
                                                         --dls-baseColumn-trailingOffset-sm: 0;
                                                         --dls-baseColumn-trailingOffset-md: 0;
                                                         --dls-baseColumn-trailingOffset-mdPlus: 0;
-                                                        --dls-baseColumn-trailingOffset-lg: 0;
+                                                        --dls-baseColumn-trailingOffset-xl: 0;
                                                         --dls-baseColumn-trailingOffset-xl: 0;
                                                         --dls-baseColumn-leadingOffset-base: 0;
                                                         --dls-baseColumn-leadingOffset-sm: 0;
                                                         --dls-baseColumn-leadingOffset-md: 0;
                                                         --dls-baseColumn-leadingOffset-mdPlus: 0;
-                                                        --dls-baseColumn-leadingOffset-lg: 0;
+                                                        --dls-baseColumn-leadingOffset-xl: 0;
                                                         --dls-baseColumn-leadingOffset-xl: 0;
                                                       "
                                                     >
@@ -7310,7 +7310,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="hidden inline-block-lg"
+                                                class="hidden inline-block-xl"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -7482,7 +7482,7 @@
                                               </div>
                                               <div class="footer__utility">
                                                 <span
-                                                  class="hidden inline-block-lg"
+                                                  class="hidden inline-block-xl"
                                                   ><span
                                                     class="footer__utility-spacer"
                                                     aria-hidden="true"
@@ -7525,7 +7525,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="hidden inline-block-lg"
+                                                class="hidden inline-block-xl"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -7696,7 +7696,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1a5fl1v hidden block-lg">
+                <div class="_1a5fl1v hidden block-xl">
                   <div class="box-border">
                     <div
                       style="
@@ -7716,7 +7716,7 @@
                                         class="header__brand"
                                         aria-label="Airbnb Homepage"
                                         href="/"
-                                        ><div class="hidden block-lg">
+                                        ><div class="hidden block-xl">
                                           <svg
                                             width="102"
                                             height="32"
@@ -10458,7 +10458,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="_sk02b4 hidden flex-lg"
+                                                    class="_sk02b4 hidden flex-xl"
                                                   >
                                                     <div class="_16bq4jy">
                                                       <div
@@ -13812,7 +13812,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="_sk02b4 hidden-lg"
+                                                    class="_sk02b4 hidden-xl"
                                                   >
                                                     <div class="_16bq4jy">
                                                       <div
@@ -19747,19 +19747,19 @@
                                                       --dls-baseColumn-width-sm: 100%;
                                                       --dls-baseColumn-width-md: 41.6667%;
                                                       --dls-baseColumn-width-mdPlus: 41.6667%;
-                                                      --dls-baseColumn-width-lg: 41.6667%;
+                                                      --dls-baseColumn-width-xl: 41.6667%;
                                                       --dls-baseColumn-width-xl: 41.6667%;
                                                       --dls-baseColumn-trailingOffset-base: 0;
                                                       --dls-baseColumn-trailingOffset-sm: 0;
                                                       --dls-baseColumn-trailingOffset-md: 0;
                                                       --dls-baseColumn-trailingOffset-mdPlus: 0;
-                                                      --dls-baseColumn-trailingOffset-lg: 0;
+                                                      --dls-baseColumn-trailingOffset-xl: 0;
                                                       --dls-baseColumn-trailingOffset-xl: 0;
                                                       --dls-baseColumn-leadingOffset-base: 0;
                                                       --dls-baseColumn-leadingOffset-sm: 0;
                                                       --dls-baseColumn-leadingOffset-md: 0;
                                                       --dls-baseColumn-leadingOffset-mdPlus: 0;
-                                                      --dls-baseColumn-leadingOffset-lg: 0;
+                                                      --dls-baseColumn-leadingOffset-xl: 0;
                                                       --dls-baseColumn-leadingOffset-xl: 0;
                                                     "
                                                   >
@@ -20078,19 +20078,19 @@
                                                     --dls-baseColumn-width-sm: 100%;
                                                     --dls-baseColumn-width-md: 33.3333%;
                                                     --dls-baseColumn-width-mdPlus: 33.3333%;
-                                                    --dls-baseColumn-width-lg: 33.3333%;
+                                                    --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-trailingOffset-base: 0;
                                                     --dls-baseColumn-trailingOffset-sm: 0;
                                                     --dls-baseColumn-trailingOffset-md: 0;
                                                     --dls-baseColumn-trailingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-trailingOffset-lg: 0;
+                                                    --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-base: 0;
                                                     --dls-baseColumn-leadingOffset-sm: 0;
                                                     --dls-baseColumn-leadingOffset-md: 0;
                                                     --dls-baseColumn-leadingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-leadingOffset-lg: 0;
+                                                    --dls-baseColumn-leadingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-xl: 0;
                                                   "
                                                 >
@@ -20311,19 +20311,19 @@
                                                     --dls-baseColumn-width-sm: 100%;
                                                     --dls-baseColumn-width-md: 33.3333%;
                                                     --dls-baseColumn-width-mdPlus: 33.3333%;
-                                                    --dls-baseColumn-width-lg: 33.3333%;
+                                                    --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-trailingOffset-base: 0;
                                                     --dls-baseColumn-trailingOffset-sm: 0;
                                                     --dls-baseColumn-trailingOffset-md: 0;
                                                     --dls-baseColumn-trailingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-trailingOffset-lg: 0;
+                                                    --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-base: 0;
                                                     --dls-baseColumn-leadingOffset-sm: 0;
                                                     --dls-baseColumn-leadingOffset-md: 0;
                                                     --dls-baseColumn-leadingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-leadingOffset-lg: 0;
+                                                    --dls-baseColumn-leadingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-xl: 0;
                                                   "
                                                 >
@@ -20504,19 +20504,19 @@
                                                     --dls-baseColumn-width-sm: 100%;
                                                     --dls-baseColumn-width-md: 33.3333%;
                                                     --dls-baseColumn-width-mdPlus: 33.3333%;
-                                                    --dls-baseColumn-width-lg: 33.3333%;
+                                                    --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-width-xl: 33.3333%;
                                                     --dls-baseColumn-trailingOffset-base: 0;
                                                     --dls-baseColumn-trailingOffset-sm: 0;
                                                     --dls-baseColumn-trailingOffset-md: 0;
                                                     --dls-baseColumn-trailingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-trailingOffset-lg: 0;
+                                                    --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-trailingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-base: 0;
                                                     --dls-baseColumn-leadingOffset-sm: 0;
                                                     --dls-baseColumn-leadingOffset-md: 0;
                                                     --dls-baseColumn-leadingOffset-mdPlus: 0;
-                                                    --dls-baseColumn-leadingOffset-lg: 0;
+                                                    --dls-baseColumn-leadingOffset-xl: 0;
                                                     --dls-baseColumn-leadingOffset-xl: 0;
                                                   "
                                                 >
@@ -20839,7 +20839,7 @@
                                           </div>
                                           <div class="footer__utility">
                                             <span
-                                              class="hidden inline-block-lg"
+                                              class="hidden inline-block-xl"
                                               ><span
                                                 class="footer__utility-spacer"
                                                 aria-hidden="true"
@@ -21007,7 +21007,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="hidden inline-block-lg"
+                                                class="hidden inline-block-xl"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -21050,7 +21050,7 @@
                                           </div>
                                           <div class="footer__utility">
                                             <span
-                                              class="hidden inline-block-lg"
+                                              class="hidden inline-block-xl"
                                               ><span
                                                 class="footer__utility-spacer"
                                                 aria-hidden="true"
