--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -86,7 +86,7 @@
                             </div>
                           </button>
                         </div>
-                        <div class="nav-brand-lg">
+                        <div class="nav-brand-xl">
                           <a
                             href="/?logo=1"
                             class="_1g2dfiu"
@@ -207,7 +207,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="cell-middle nav-links-lg">
+                <div class="cell-middle nav-links-xl">
                   <div>
                     <div class="inherit-hide-print">
                       <nav aria-label="Main navigation menu">
@@ -727,7 +727,7 @@
               <footer role="contentinfo">
                 <div class="breadcrumb__text">
                   <div>
-                    <div class="footer-hr-lg">
+                    <div class="footer-hr-xl">
                       <div style="margin-top: 16px; margin-bottom: 16px">
                         <div class="_7qp4lh"></div>
                       </div>
