--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr hidden block-md">
@@ -46,7 +46,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="hidden block-lg">
+                                ><div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
@@ -2883,7 +2883,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -3033,7 +3033,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="hidden inline-block-lg"
+                                        class="hidden inline-block-xl"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -3066,7 +3066,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
