--- a/signup_login.html
+++ b/signup_login.html
@@ -45,7 +45,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility"></div>
                     <main id="site-content">
@@ -3069,7 +3069,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr" style="">
@@ -3081,7 +3081,7 @@
                                 aria-label="Airbnb Homepage"
                                 href="/"
                               >
-                                <div class="hidden block-lg">
+                                <div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
@@ -6265,7 +6265,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -6415,7 +6415,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="hidden inline-block-lg"
+                                        class="hidden inline-block-xl"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -6448,7 +6448,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -6621,7 +6621,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr">
@@ -6633,7 +6633,7 @@
                                 aria-label="Airbnb Homepage"
                                 href="/"
                               >
-                                <div class="hidden block-lg">
+                                <div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
