--- a/specific_trip.html
+++ b/specific_trip.html
@@ -57,7 +57,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="hidden block-lg">
+                                ><div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
@@ -5929,7 +5929,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -6082,7 +6082,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="hidden inline-block-lg"
+                                        class="hidden inline-block-xl"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -6115,7 +6115,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
