--- a/calendar.html
+++ b/calendar.html
@@ -195,7 +195,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="inline hidden-lg">
+                          <div class="inline hidden-xl">
                             <button
                               aria-label="Today"
                               type="button"
@@ -293,7 +293,7 @@
                           >
                             <div class="main_content__header-current_date">
                               <div class="main_content__header-date--today">July 1, 2022</div>
-                              <div class="inline hidden-lg">July 2022</div>
+                              <div class="inline hidden-xl">July 2022</div>
                               <span class="main_content__header-current_date_btn_wrapper"
                                 ><svg
                                   viewBox="0 0 32 32"
@@ -745,7 +745,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="hidden inline-md hidden-lg">
+                          <div class="hidden inline-md hidden-xl">
                             <div class="main_content__header-action-btn">
                               <div>
                                 <div>
