--- a/calendar_week.html
+++ b/calendar_week.html
@@ -196,7 +196,7 @@
                               Today
                             </button>
                           </div>
-                          <div class="inline hidden-lg">
+                          <div class="inline hidden-xl">
                             <button
                               aria-label="Today"
                               type="button"
@@ -294,7 +294,7 @@
                           >
                             <div class="main_content__header-current_date">
                               <div class="main_content__header-date--today">July 9, 2022</div>
-                              <div class="inline hidden-lg">July 2022</div>
+                              <div class="inline hidden-xl">July 2022</div>
                               <span class="main_content__header-current_date_btn_wrapper"
                                 ><svg
                                   viewBox="0 0 32 32"
@@ -746,7 +746,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="hidden inline-md hidden-lg">
+                          <div class="hidden inline-md hidden-xl">
                             <div class="main_content__header-action-btn">
                               <div>
                                 <div>
