--- a/covidsafety.html
+++ b/covidsafety.html
@@ -2204,7 +2204,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="hidden inline-block-lg"
+                                <span class="hidden inline-block-xl"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -2347,7 +2347,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="hidden inline-block-lg"
+                                  <span class="hidden inline-block-xl"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
@@ -2376,7 +2376,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="hidden inline-block-lg"
+                                <span class="hidden inline-block-xl"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
