--- a/insights.html
+++ b/insights.html
@@ -1885,7 +1885,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="hidden inline-block-lg"
+                              <span class="hidden inline-block-xl"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
@@ -2029,7 +2029,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="hidden inline-block-lg"
+                                <span class="hidden inline-block-xl"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -2060,7 +2060,7 @@
                               © 2022 Airbnb, Inc.
                             </div>
                             <div class="footer__utility">
-                              <span class="hidden inline-block-lg"
+                              <span class="hidden inline-block-xl"
                                 ><span class="footer__utility-spacer" aria-hidden="true"
                                   >·</span
                                 ></span
