--- a/payment.html
+++ b/payment.html
@@ -46,7 +46,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr">
@@ -56,7 +56,7 @@
                               class="header__brand"
                               aria-label="Airbnb Homepage"
                               href="payment.html"
-                              ><div class="hidden block-lg">
+                              ><div class="hidden block-xl">
                                 <svg
                                   width="102"
                                   height="32"
@@ -1441,7 +1441,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="hidden inline-block-lg"
+                                                class="hidden inline-block-xl"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
@@ -1616,7 +1616,7 @@
                                               </div>
                                               <div class="footer__utility">
                                                 <span
-                                                  class="hidden inline-block-lg"
+                                                  class="hidden inline-block-xl"
                                                   ><span
                                                     class="footer__utility-spacer"
                                                     aria-hidden="true"
@@ -1659,7 +1659,7 @@
                                             </div>
                                             <div class="footer__utility">
                                               <span
-                                                class="hidden inline-block-lg"
+                                                class="hidden inline-block-xl"
                                                 ><span
                                                   class="footer__utility-spacer"
                                                   aria-hidden="true"
