--- a/places.html
+++ b/places.html
@@ -47,7 +47,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr">
@@ -59,7 +59,7 @@
                                 aria-label="Airbnb Homepage"
                                 href="/"
                               >
-                                <div class="hidden block-lg">
+                                <div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
@@ -16962,7 +16962,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -17112,7 +17112,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="hidden inline-block-lg"
+                                        class="hidden inline-block-xl"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -17145,7 +17145,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
