--- a/preferences.html
+++ b/preferences.html
@@ -44,7 +44,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility"></div>
                     <main id="site-content">
@@ -1768,7 +1768,7 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="page-shell-max-lg-plus">
+                <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="page-shell__visibility">
                       <div class="display__flex dir dir-ltr">
@@ -1779,7 +1779,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="hidden block-lg">
+                                ><div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
@@ -3577,7 +3577,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
@@ -3727,7 +3727,7 @@
                                     </div>
                                     <div class="footer__utility">
                                       <span
-                                        class="hidden inline-block-lg"
+                                        class="hidden inline-block-xl"
                                         ><span
                                           class="footer__utility-spacer"
                                           aria-hidden="true"
@@ -3760,7 +3760,7 @@
                                     © 2022 Airbnb, Inc.
                                   </div>
                                   <div class="footer__utility">
-                                    <span class="hidden inline-block-lg"
+                                    <span class="hidden inline-block-xl"
                                       ><span class="footer__utility-spacer" aria-hidden="true"
                                         >·</span
                                       ></span
