--- a/press-release.html
+++ b/press-release.html
@@ -1403,7 +1403,7 @@
       <footer class="siteFooter">
         <div class="siteFooter__main container">
           <div class="row">
-            <div class="siteFooter__columnWrap col-lg-3">
+            <div class="siteFooter__columnWrap col-xl-3">
               <h4 class="siteFooter__columnTitle">About</h4>
               <ul id="menu-about" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1430,7 +1430,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-lg-3">
+            <div class="siteFooter__columnWrap col-xl-3">
               <h4 class="siteFooter__columnTitle">Hosting</h4>
               <ul id="menu-hosting" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1459,7 +1459,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-lg-3">
+            <div class="siteFooter__columnWrap col-xl-3">
               <h4 class="siteFooter__columnTitle">Community</h4>
               <ul id="menu-community" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1480,7 +1480,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-lg-3">
+            <div class="siteFooter__columnWrap col-xl-3">
               <h4 class="siteFooter__columnTitle">Support</h4>
               <ul id="menu-support" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1515,7 +1515,7 @@
                 </li>
               </ul>
             </div>
-            <div class="siteFooter__columnWrap siteFooter__disclaimer col-lg-6">
+            <div class="siteFooter__columnWrap siteFooter__disclaimer col-xl-6">
               <h4 class="siteFooter__columnTitle">Disclaimer</h4>
 
               <p class="siteFooter__disclaimerText">
