--- a/resources.html
+++ b/resources.html
@@ -174,7 +174,7 @@
                             </button>
                           </div>
                         </div>
-                        <div data-showat="largeAndAbove" class="menu-lg">
+                        <div data-showat="largeAndAbove" class="menu-xl">
                           <div class="_cjo0m2">
                             <nav aria-label="Resource Center">
                               <ul class="_1s04l2o">
@@ -1085,7 +1085,7 @@
                                       ></div>
                                     </ul>
                                   </div>
-                                  <div class="gallery-lg">
+                                  <div class="gallery-xl">
                                     <div class="hidden__md">
                                       <div class="_1hytef3">
                                         <div class="vh-100">
@@ -5413,7 +5413,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="hidden inline-block-lg"
+                                <span class="hidden inline-block-xl"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
@@ -5556,7 +5556,7 @@
                                   © 2022 Airbnb, Inc.
                                 </div>
                                 <div class="footer__utility">
-                                  <span class="hidden inline-block-lg"
+                                  <span class="hidden inline-block-xl"
                                     ><span class="footer__utility-spacer" aria-hidden="true"
                                       >·</span
                                     ></span
@@ -5585,7 +5585,7 @@
                                 © 2022 Airbnb, Inc.
                               </div>
                               <div class="footer__utility">
-                                <span class="hidden inline-block-lg"
+                                <span class="hidden inline-block-xl"
                                   ><span class="footer__utility-spacer" aria-hidden="true"
                                     >·</span
                                   ></span
