--- a/wishlist.html
+++ b/wishlist.html
@@ -55,7 +55,7 @@
                                 class="header__brand"
                                 aria-label="Airbnb Homepage"
                                 href="/"
-                                ><div class="hidden block-lg">
+                                ><div class="hidden block-xl">
                                   <svg
                                     width="102"
                                     height="32"
