replace _16xcv07v -> hidden block-lg, create block-lg

--- a/merchandising.html
+++ b/merchandising.html
@@ -8427,7 +8427,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_16xcv07v">
+                                        <div class="hidden block-lg">
                                           <div
                                             class="_kzbt0"
                                             style="
