--- a/resources.html
+++ b/resources.html
@@ -1813,7 +1813,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_16xcv07v">
+                                    <div class="hidden block-lg">
                                       <div class="header__logo">
                                         <div class="vh-100">
                                           <div class="relative">
